# pggit

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: basic.rs  concurrent.rs  diff_checkout.rs  porcelain.rs  smart_http_server.rs
src/: error.rs  lib.rs  store.rs  types.rs
src/backend/: mod.rs  odb.rs  refdb.rs  repo.rs
src/db/: queries.rs  schema.rs
src/http/: cgi.rs  error.rs  mod.rs  routes.rs  state.rs  workdir.rs
src/http/proto/: advert.rs  mod.rs  receive_pack.rs  sideband.rs  upload_pack.rs
src/porcelain/: checkout.rs  diff.rs  mod.rs  repository.rs  tree.rs
tests/: integration.rs  smart_http.rs
