[package]
name = "pggit"
version = "0.1.0"
edition = "2024"

[features]
default = []
smart-http = ["dep:axum", "dep:tower", "dep:tower-http", "dep:bytes", "dep:futures", "dep:tempfile", "dep:serde"]

[dependencies]
git2 = "0.20.4"
libgit2-sys = "0.18"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-rustls-aws-lc-rs"] }
tokio = { version = "1.50.0", features = ["full"] }
thiserror = "2"
tracing = "0.1"

# smart-http feature
axum       = { version = "0.8", optional = true }
tower      = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["trace"], optional = true }
bytes      = { version = "1", optional = true }
futures    = { version = "0.3", optional = true }
tempfile   = { version = "3", optional = true }
serde      = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "smart_http_server"
required-features = ["smart-http"]
