[package]
name = "pggit"
version = "0.1.0"
edition = "2024"

[features]
default = []
smart-http = ["dep:axum", "dep:tempfile", "dep:serde", "dep:tokio-util", "dep:gix-packetline"]

[dependencies]
git2 = "0.20.4"
libgit2-sys = "0.18"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-rustls-aws-lc-rs"] }
tokio = { version = "1.50.0", features = ["full"] }
thiserror = "2"
tracing = "0.1"

# smart-http feature
axum       = { version = "0.8", optional = true }
tempfile   = { version = "3", optional = true }
serde      = { version = "1", features = ["derive"], optional = true }
tokio-util = { version = "0.7", features = ["io", "io-util"], optional = true }
gix-packetline = { version = "0.21.3", features = ["blocking-io"], optional = true }

[dev-dependencies]
tempfile = "3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "smart_http_server"
required-features = ["smart-http"]
